force-app/main/default/objects/OrderProductJSONInfo__mdt/OrderProductJSONInfo__mdt.object-meta.xml
<CustomObject>
    <label>OrderProductJSONInfo</label>
    <pluralLabel>OrderProductJSONInfo</pluralLabel>
</CustomObject>