force-app/main/default/objects/OrderProductJSONInfo__mdt/fields/On_Call_Pickup_Type__c.field-meta.xml
<CustomField>
    <fullName>On_Call_Pickup_Type__c</fullName>
    <label>On-Call Pickup Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>