force-app/main/default/objects/OrderProductJSONInfo__mdt/fields/Removal__c.field-meta.xml
<CustomField>
    <fullName>Removal__c</fullName>
    <label>Removal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>