force-app/main/default/objects/OrderProductJSONInfo__mdt/fields/Scheduled_On_Call_Pickup_Type__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_On_Call_Pickup_Type__c</fullName>
    <label>Scheduled On-Call Pickup Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>