force-app/main/default/objects/OrderProductJSONInfo__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>On_Call_Pickup_Type__c</columns>
    <columns>Removal__c</columns>
    <columns>Scheduled_On_Call_Pickup_Type__c</columns>
    <columns>Scheduled_Pickup_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>